# ansible-homelab

./: README.md  ansible.cfg  lint  main.yml  notes.md  pyproject.toml  requirements.yml  tasks.py
bootstrap-configs/debian/: testing-singleDisk.bash
group_vars/: all.yml
inventory/: dns-entry.txt  hosts.yml  local-desktop.yml  local-desktop_alt.yml  local-desktop_experimental.yml  local-server.yml  local.yml
molecule/bootstrap/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/common/: converge.yml  molecule.yml  verify.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/full_cicd/: molecule.yml  prepare.yml  verify.yml
molecule/install_apps/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/install_fonts/: converge.yml  molecule.yml  verify.yml
molecule/virtualbox_guest/: converge.yml  molecule.yml  prepare.yml  verify.yml
playbooks/: facts.yml  ping.yml  reboot.yml  test.yml  upgrade-full.yml  upgrade.yml
plugins/modules/: manage_apt_key.py
roles/bootstrap/defaults/: main.yml
roles/bootstrap/handlers/: main.yml
roles/bootstrap/tasks/: apt-installs.yml  configure-bootSettings.yml  configure-console.yml  configure-data-user-group.yml  configure-hostname.yml  configure-locale.yml  configure-storage.yml  configure-svcacct-user.yml  configure-timezone.yml  main.yml
roles/bootstrap/templates/: etc-sudoers.d--svcacct.j2
roles/common/defaults/: main.yml
roles/common/handlers/: main.yml
roles/common/tasks/: apt-configuration.yml  common-packages.yml  firewall.yml  fuse.yml  main.yml  my-user.yml  (+8 more)
(+46 files in other folders)
