[tool.poetry]
name = "ansible-homelab"
version = "0.1.0"
description = "Ansible scripts for my home machines & vms"
authors = ["Brennan Fee <brennan@github.mailbots.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.1"
dnspython = "^2.3"

[tool.poetry.dev-dependencies]
ansible = "^8.1"
ansible-lint = { version = "^6.17", markers = 'platform_system != "Windows"' }
black = "^23.3"
flake8 = "^6.0"
molecule = "^5.1"
molecule-plugins = "^23.4"
python-vagrant = "^1.0"
yamllint = "^1.32"

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
