[tool.poetry]
name = "ansible-homelab"
version = "0.1.0"
description = "Ansible scripts for my home machines & vms"
authors = ["Brennan Fee <brennan@github.mailbots.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^8.5"
dnspython = "^2.4"

[tool.poetry.dev-dependencies]
ansible = "^8.5"
ansible-lint = { version = "^6.21", markers = 'platform_system != "Windows"' }
black = "^23.10"
flake8 = "^6.1"
molecule = "^6.0"
molecule-plugins = "^23.5"
python-vagrant = "^1.0"
yamllint = "^1.32"

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
